// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Sidebar> snapshots (collapsed vs expanded) > matches the collapsed-state snapshot 1`] = `
<DocumentFragment>
  <aside
    aria-label="Workers sidebar"
    class="flex w-full shrink-0 flex-col border-b border-border bg-background transition-[width] duration-200 ease-out motion-reduce:transition-none md:border-b-0 md:border-r pl-safe-l pb-safe-b md:w-14"
    data-collapsed="true"
    data-print-hide="true"
  >
    <div
      class="c4-scroll overflow-y-auto overflow-x-hidden flex min-h-0 flex-1 flex-col md:px-2 md:py-3 p-4"
      data-scrollarea-size="auto"
      data-section="scroll-area"
      data-shadows="false"
    >
      <div
        class="mb-4 flex items-center gap-2 md:flex-col md:gap-1"
      >
        <span
          class="relative inline-flex"
          data-arrow="false"
          data-placement="bottom"
          data-section="tooltip"
          data-tooltip-root="true"
          data-visible="false"
        >
          <button
            aria-keyshortcuts="Control+B Control+Backslash"
            aria-label="Expand sidebar"
            aria-pressed="true"
            class="items-center justify-center rounded-md transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-offset-background motion-safe:transition-transform motion-safe:duration-75 motion-safe:active:scale-95 h-9 w-9 min-h-[44px] min-w-[44px] sm:min-h-0 sm:min-w-0 text-muted-foreground hover:bg-accent hover:text-accent-foreground focus-visible:ring-primary hidden md:inline-flex md:mt-1"
            data-loading="false"
            data-section="icon-button"
            data-size="md"
            data-tone="neutral"
            type="button"
          >
            <span
              aria-hidden="true"
              data-section="icon-button-icon"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-panel-left-open h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M9 3v18"
                />
                <path
                  d="m14 9 3 3-3 3"
                />
              </svg>
            </span>
          </button>
          <span
            aria-label="Tooltip"
            class="pointer-events-none absolute z-50 max-w-[260px] whitespace-pre-line rounded-md border border-border bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md transition-opacity top-full left-1/2 -translate-x-1/2 mt-1.5 opacity-0"
            data-visible="false"
            id=":r1:"
            role="tooltip"
          >
            <span
              class="inline-flex items-center gap-1"
            >
              <span>
                Expand sidebar
              </span>
              <span
                data-kbd="true"
                data-platform="other"
              >
                <kbd
                  class="inline-flex items-center rounded border bg-muted text-muted-foreground px-1.5 text-xs font-mono"
                >
                  Ctrl
                </kbd>
                <span
                  aria-hidden="true"
                  data-kbd-separator="true"
                >
                   + 
                </span>
                <kbd
                  class="inline-flex items-center rounded border bg-muted text-muted-foreground px-1.5 text-xs font-mono"
                >
                  B
                </kbd>
              </span>
              <span
                aria-hidden="true"
              >
                /
              </span>
              <span
                data-kbd="true"
                data-platform="other"
              >
                <kbd
                  class="inline-flex items-center rounded border bg-muted text-muted-foreground px-1.5 text-xs font-mono"
                >
                  Ctrl
                </kbd>
                <span
                  aria-hidden="true"
                  data-kbd-separator="true"
                >
                   + 
                </span>
                <kbd
                  class="inline-flex items-center rounded border bg-muted text-muted-foreground px-1.5 text-xs font-mono"
                >
                  \\
                </kbd>
              </span>
            </span>
          </span>
        </span>
        <div
          aria-label="Worker view mode"
          class="hidden flex-col gap-1 md:flex"
          role="tablist"
        >
          <span
            class="relative inline-flex"
            data-arrow="false"
            data-placement="right"
            data-section="tooltip"
            data-tooltip-root="true"
            data-visible="false"
          >
            <button
              aria-label="List view"
              aria-selected="true"
              class="inline-flex h-8 w-8 items-center justify-center rounded-md border transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:ring-offset-background border-border bg-primary/30 text-foreground"
              role="tab"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-list h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 12h.01"
                />
                <path
                  d="M3 18h.01"
                />
                <path
                  d="M3 6h.01"
                />
                <path
                  d="M8 12h13"
                />
                <path
                  d="M8 18h13"
                />
                <path
                  d="M8 6h13"
                />
              </svg>
            </button>
            <span
              aria-label="List view"
              class="pointer-events-none absolute z-50 max-w-[260px] whitespace-pre-line rounded-md border border-border bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md transition-opacity left-full top-1/2 -translate-y-1/2 ml-1.5 opacity-0"
              data-visible="false"
              id=":r2:"
              role="tooltip"
            >
              List view
            </span>
          </span>
          <span
            class="relative inline-flex"
            data-arrow="false"
            data-placement="right"
            data-section="tooltip"
            data-tooltip-root="true"
            data-visible="false"
          >
            <button
              aria-label="Tree view"
              aria-selected="false"
              class="inline-flex h-8 w-8 items-center justify-center rounded-md border border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:ring-offset-background text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              role="tab"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-network h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="6"
                  rx="1"
                  width="6"
                  x="16"
                  y="16"
                />
                <rect
                  height="6"
                  rx="1"
                  width="6"
                  x="2"
                  y="16"
                />
                <rect
                  height="6"
                  rx="1"
                  width="6"
                  x="9"
                  y="2"
                />
                <path
                  d="M5 16v-3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3"
                />
                <path
                  d="M12 12V8"
                />
              </svg>
            </button>
            <span
              aria-label="Tree view"
              class="pointer-events-none absolute z-50 max-w-[260px] whitespace-pre-line rounded-md border border-border bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md transition-opacity left-full top-1/2 -translate-y-1/2 ml-1.5 opacity-0"
              data-visible="false"
              id=":r3:"
              role="tooltip"
            >
              Tree view
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="border-t border-border bg-card/50 p-2"
    >
      <div
        data-collapsed="true"
        data-testid="account-menu"
      >
        account-menu
      </div>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`<Sidebar> snapshots (collapsed vs expanded) > matches the expanded-state snapshot 1`] = `
<DocumentFragment>
  <aside
    aria-label="Workers sidebar"
    class="flex w-full shrink-0 flex-col border-b border-border bg-background transition-[width] duration-200 ease-out motion-reduce:transition-none md:border-b-0 md:border-r pl-safe-l pb-safe-b md:w-72"
    data-collapsed="false"
    data-print-hide="true"
  >
    <div
      class="c4-scroll overflow-y-auto overflow-x-hidden flex min-h-0 flex-1 flex-col p-4"
      data-scrollarea-size="auto"
      data-section="scroll-area"
      data-shadows="false"
    >
      <div
        class="mb-4 flex items-center gap-2"
      >
        <span
          class="text-xs uppercase tracking-wide text-muted-foreground"
        >
          Workers
        </span>
        <span
          class="relative inline-flex"
          data-arrow="false"
          data-placement="bottom"
          data-section="tooltip"
          data-tooltip-root="true"
          data-visible="false"
        >
          <button
            aria-keyshortcuts="Control+B Control+Backslash"
            aria-label="Collapse sidebar"
            aria-pressed="false"
            class="items-center justify-center rounded-md transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-offset-background motion-safe:transition-transform motion-safe:duration-75 motion-safe:active:scale-95 h-9 w-9 min-h-[44px] min-w-[44px] sm:min-h-0 sm:min-w-0 text-muted-foreground hover:bg-accent hover:text-accent-foreground focus-visible:ring-primary hidden md:inline-flex ml-auto"
            data-loading="false"
            data-section="icon-button"
            data-size="md"
            data-tone="neutral"
            type="button"
          >
            <span
              aria-hidden="true"
              data-section="icon-button-icon"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-panel-left-close h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M9 3v18"
                />
                <path
                  d="m16 15-3-3 3-3"
                />
              </svg>
            </span>
          </button>
          <span
            aria-label="Tooltip"
            class="pointer-events-none absolute z-50 max-w-[260px] whitespace-pre-line rounded-md border border-border bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md transition-opacity top-full left-1/2 -translate-x-1/2 mt-1.5 opacity-0"
            data-visible="false"
            id=":r0:"
            role="tooltip"
          >
            <span
              class="inline-flex items-center gap-1"
            >
              <span>
                Collapse sidebar
              </span>
              <span
                data-kbd="true"
                data-platform="other"
              >
                <kbd
                  class="inline-flex items-center rounded border bg-muted text-muted-foreground px-1.5 text-xs font-mono"
                >
                  Ctrl
                </kbd>
                <span
                  aria-hidden="true"
                  data-kbd-separator="true"
                >
                   + 
                </span>
                <kbd
                  class="inline-flex items-center rounded border bg-muted text-muted-foreground px-1.5 text-xs font-mono"
                >
                  B
                </kbd>
              </span>
              <span
                aria-hidden="true"
              >
                /
              </span>
              <span
                data-kbd="true"
                data-platform="other"
              >
                <kbd
                  class="inline-flex items-center rounded border bg-muted text-muted-foreground px-1.5 text-xs font-mono"
                >
                  Ctrl
                </kbd>
                <span
                  aria-hidden="true"
                  data-kbd-separator="true"
                >
                   + 
                </span>
                <kbd
                  class="inline-flex items-center rounded border bg-muted text-muted-foreground px-1.5 text-xs font-mono"
                >
                  \\
                </kbd>
              </span>
            </span>
          </span>
        </span>
        <div
          aria-label="Worker view mode"
          class="ml-auto flex overflow-hidden rounded-md border border-border text-xs"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="inline-flex items-center gap-1.5 px-2 py-1 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:ring-offset-background bg-primary/30 text-foreground"
            role="tab"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-list h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12h.01"
              />
              <path
                d="M3 18h.01"
              />
              <path
                d="M3 6h.01"
              />
              <path
                d="M8 12h13"
              />
              <path
                d="M8 18h13"
              />
              <path
                d="M8 6h13"
              />
            </svg>
            List
          </button>
          <button
            aria-selected="false"
            class="inline-flex items-center gap-1.5 px-2 py-1 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:ring-offset-background text-muted-foreground hover:bg-accent hover:text-accent-foreground"
            role="tab"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-network h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="6"
                rx="1"
                width="6"
                x="16"
                y="16"
              />
              <rect
                height="6"
                rx="1"
                width="6"
                x="2"
                y="16"
              />
              <rect
                height="6"
                rx="1"
                width="6"
                x="9"
                y="2"
              />
              <path
                d="M5 16v-3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3"
              />
              <path
                d="M12 12V8"
              />
            </svg>
            Tree
          </button>
        </div>
      </div>
      <div
        data-testid="worker-list"
      >
        worker-list
      </div>
    </div>
    <div
      class="border-t border-border bg-card/50 p-2"
    >
      <div
        data-collapsed="false"
        data-testid="account-menu"
      >
        account-menu
      </div>
    </div>
  </aside>
</DocumentFragment>
`;
